# richtato

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_REFERENCE.md  Anderson Notebook.ipynb  CATEGORIZATION_SETUP.md  CLAUDE.md  Dockerfile  Dockerfile.backend  README-DOCKER.md  README-REFACTOR.md  README.md  REFACTORING_SUMMARY.md  Richtato.bat  SYNC_FIXES.md  backend.md  bofa.sh  build-frontend.sh  build.sh  cloudpublish.sh  cloudstart.sh  create_or_reset_demo.sh  data_analysis.ipynb  dev-start.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.x11.yml  docker-compose.yaml  docker-compose.yml  docker-dev.sh  docker.bash  env.template  nginx.template.conf  ping.sh  publish.sh  pyproject.toml  requirements.txt  run.bash  (+4 more)
backend/: .pre-commit-type-check.sh  API_DOCUMENTATION.md  CLAUDE.md  Dockerfile  conftest.py  create_or_reset_demo.sh  package.json  pyproject.toml  reset_migrations.sh  squash_all_migrations.sh
backend/apps/account/: models.py  serializers.py  urls.py  views.py
backend/apps/asset_dashboard/: admin.py  apps.py  models.py  urls.py  views.py
backend/apps/assistant/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/bank_automation/: admin.py  apps.py  audit.py  encryption.py  models.py  serializers.py  urls.py  views.py
backend/apps/bank_sync/: __init__.py  admin.py  apps.py  audit.py  encryption.py  models.py  serializers.py  urls.py  views.py
backend/apps/budget/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/budget_dashboard/: admin.py  apps.py  models.py  urls.py  views.py
backend/apps/budget_v2/: admin.py  apps.py  models.py  urls.py  views.py
backend/apps/card/: __init__.py  admin.py  constants.py  models.py  serializers.py  urls.py  views.py
backend/apps/categorization/: admin.py  apps.py  models.py
backend/apps/category/: __init__.py  admin.py  apps.py  constants.py  models.py  signals.py
backend/apps/core/: constants.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/apps/dashboard/: apps.py  urls.py  views.py
backend/apps/expense/: imports.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/apps/financial_account/: STATEMENT_IMPORT_CLEANUP.md  admin.py  apps.py  encryption.py  models.py  serializers.py  urls.py  urls_card_accounts.py  views.py
backend/apps/household/: apps.py  models.py  scope.py  serializers.py  urls.py  views.py
backend/apps/income/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/richtato_user/: admin.py  apps.py  demo_user_factory.py  middleware.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py  views_clean.py
backend/apps/settings/: cleanup_demo_users_middleware.py  models.py  self_ping_middleware.py  serializers.py  settings.py  urls.py  views.py
backend/apps/sync/: admin.py  apps.py  middleware.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/teller/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/transaction/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/artificial_intelligence/: ai.py
backend/categories/: categories.py  categories_manager.py
backend/config/: categories_defaults.yaml
backend/integrations/: base.py
backend/integrations/plaid/: __init__.py  client.py
backend/integrations/teller/: client.py
backend/richtato/: asgi.py  context_processors.py  settings.py  test_pg_settings.py  test_settings.py  urls.py  views.py
backend/statement_imports/cards/: american_express.py  bank_of_america.py  card_canonicalizer.py  card_factory.py  chase.py  citi.py
backend/statement_imports/ocr/: extract.py
backend/static/css/: components.css  layout.css  main.css
backend/templates_backup/: Friends.html  base.html  expense.html  goals.html  index.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  profile.html  register.html  table.html  user_settings.html  welcome_base.html
backend/utilities/: tools.py
backend/utilities/postgres/: pg_client.py
cli/: README.md  pyproject.toml
cli/richtato_cli/: __init__.py  cli.py
google_drive/: pyproject.toml
google_drive/google_drive/: client.py
google_drive/google_drive/credentials/: credentials.json
google_gemini/: pyproject.toml
google_gemini/google_gemini/: ai.py
richtato/: .gitignore  db.sqlite3  docker-compose.yaml  import.ipynb  manage.py  package-lock.json  pyproject.toml  test.ipynb
richtato/apps/account/: apps.py  models.py  serializers.py  urls.py  views.py
richtato/apps/budget/: apps.py  models.py  serializers.py  urls.py  views.py
richtato/apps/dashboard/: urls.py  views.py
richtato/artificial_intelligence/: ai.py
richtato/categories/: categories.py  categories_manager.py  help.ipynb
richtato/google_drive/: client.py
richtato/google_gemini/: ai.py
richtato/graph/: chart_theme.py
richtato/imports/: db_insert.py
richtato/pages/: 404.html  500.html  Courses.html  Files.html  Friends.html  Plans.html  Profile.html  Projects.html  account_settings.html  account_transaction_chart.html  assets.html  auth_base.html  base.html  budget.html  dashboard.html  files.html  goals.html  graph.html  income.html  index.html  input.html  layout.html  login.html  old-settings.html  old_settings.html  password_reset_done.html  password_reset_email.html  password_reset_subject.txt  profile.html  register.html  settings.html  table.html  temp_input.html  timeseries_graph.html  timeseries_plots.html  upload.html  user_settings.html  welcome.html  welcome_base.html
richtato/richtato/: asgi.py  context_processors.py  settings.py  urls.py  views.py  wsgi.py
richtato/static/: README.md  all.min.css  core.css  home.css  style.css
richtato/templates/: index.html  layout.html  layout_v2.html
richtato/utilities/: ai.py  cleanup_demo_users.py  db_model.py  imports.py  tools.py  utils.py
richtato/viz/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
(+954 files in other folders)
