[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "richtato"
version = "0.1.0"
description = "Richtato project"
authors = [
    { name = "brotatokuo", email = "kuoalan9@example.com" }
]

dependencies = [
    "Django>4.2.20",
    "pandas==2.2.3",
    "google-generativeai==0.8.4",
    "fuzzywuzzy==0.18.0",
    "colorama==0.4.6",
    "psycopg2-binary==2.9.10",
    "google-api-python-client==2.166.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "gspread==6.1.4",
    "gspread-formatting==1.2.0",
    "gspread-dataframe==4.0.0",
    "openpyxl==3.1.5",
    "python-Levenshtein==0.26.1",
    "python-dotenv==1.0.1",
    "loguru==0.7.3",
    "typing-extensions==4.12.2",
    "djangorestframework==3.16.0",
    "plotly==6.1.1",
    "openai==1.91.0",
]


[tool.setuptools.packages.find]
where = ["."]  # Look in the root directory
include = ["richtato*"]  # Include richtato and all its subpackages
