[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "richtato-cli"
version = "0.1.0"
description = "Richtato development and deployment CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "simple-term-menu>=1.6.0",
]
authors = [
    {name = "Alan"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
richtato = "richtato_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
