[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google_drive"
version = "0.1.0"
description = "Google Drive access"
authors = [
    { name = "brotatokuo", email = "kuoalan9@example.com" }
]
dependencies = [
    "pandas",
    "colorama",
    "gspread"
]
